[package]
name = "pied"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

[dependencies.tock-registers]
version = "~0.7"
default-features = false
features = ["register_types"]
optional = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "~6"
spin = { version = "~0.9", default_features = false, features = ["spin_mutex"] }